--- a/kintone-help-astro-poc/src/pages/ja/start/app_create/index.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/start/app_create/index.mdx
@@ -1,11 +1,13 @@
 ---
 title: "アプリを作ってみる"
 weight: 400
-aliases: "/ja/id/040131"
+aliases:
+  - "/ja/id/040131"
 layout: "@/layouts/SectionLayout.astro"
 ---
 
 import Kintone from "@/components/Kintone.astro";
+
 
 <Kintone />では、さまざまな業務に対応するアプリを作成することが可能です。アプリを作成するには、ドラッグアンドドロップで必要な項目を選んで作成する方法や、今使っているExcelファイルからアプリを作成する方法などがあります。
 
