--- a/kintone-help-astro-poc/src/pages/ja/start/index.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/start/index.mdx
@@ -1,10 +1,12 @@
 ---
 title: "スタートガイド"
 weight: 100
-aliases: "/ja/id/040130"
+aliases:
+  - "/ja/id/040130"
 layout: "@/layouts/SectionLayout.astro"
 ---
 
 import Kintone from "@/components/Kintone.astro";
+
 
 このガイドでは、<Kintone />を導入したばかりの方や、無料お試し期間中の方向けに、<Kintone />の特徴がよくわかる基本的な操作を紹介しています。実際に操作しながら、<Kintone />の構成や特徴を体験してみましょう。
