--- a/kintone-help-astro-poc/src/pages/ja/start/space_create/index.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/start/space_create/index.mdx
@@ -1,11 +1,13 @@
 ---
 title: "スペースを作ってみる"
 weight: 500
-aliases: "/ja/id/040142"
+aliases:
+  - "/ja/id/040142"
 layout: "@/layouts/SectionLayout.astro"
 ---
 
 import Kintone from "@/components/Kintone.astro";
+
 
 スペースとは、必要なやり取りや情報を集約できる「チームの場所」のようなものです。チームにとって必要な情報や連絡事項などを集約できます。  
 
