--- a/kintone-help-astro-poc/src/pages/ja/start/departments_users/index.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/start/departments_users/index.mdx
@@ -1,12 +1,15 @@
 ---
 title: "ユーザーと組織の追加"
 weight: 300
-aliases: "/ja/id/040136"
+aliases:
+  - "/ja/id/040136"
 layout: "@/layouts/SectionLayout.astro"
 ---
 
 import Kintone from "@/components/Kintone.astro";
 import SlashUi from "@/components/SlashUi.astro";
+import Wovn from "@/components/Wovn.astro";
+
 
 <Kintone />を複数人で利用するには、利用するユーザーを追加する必要があります。また、部署などを「組織」として追加し、複数のユーザーを管理することも可能です。
 
@@ -16,6 +19,6 @@ import SlashUi from "@/components/SlashUi.astro";
   はじめてログインしたときや無料お試し期間中は、招待機能を利用してほかのメンバーにメールを送ることで、<Kintone />にユーザーが追加されます。詳細は、次のページを参照してください。  
   [チームメンバーを招待する](/k/ja/id/040139.html)
 * **ユーザーと組織を登録する：**  
-  お試し期間中であるかどうかにかかわらず、ユーザーや組織を［<SlashUi />］画面から登録できます。詳細は、次のページを参照してください。  
+  お試し期間中であるかどうかにかかわらず、ユーザーや組織を<Wovn>［<SlashUi />］</Wovn>画面から登録できます。詳細は、次のページを参照してください。  
   [組織を追加する](/k/ja/id/040137.html)  
   [ユーザーを追加する](/k/ja/id/040138.html)
