--- a/kintone-help-astro-poc/src/pages/ja/start/space_create/add_team_space.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/start/space_create/add_team_space.mdx
@@ -2,13 +2,16 @@
 title: "チームのスペースを作ってみよう"
 weight: 100
 type: "series"
-aliases: "/ja/id/040143"
+aliases:
+  - "/ja/id/040143"
 layout: "@/layouts/PageLayout.astro"
 ---
 
-import Img from "@/components/Img.astro";
 import Hint from "@/components/Hint.astro";
+import Img from "@/components/Img.astro";
 import Kintone from "@/components/Kintone.astro";
+import Wovn from "@/components/Wovn.astro";
+
 
 スペースとは、必要なやり取りや情報を集約できるチームの「場所」のようなものです。チームやプロジェクトごとにスペースを作成し、そのスペースに参加するメンバーを自由に設定できます。
 
@@ -24,43 +27,45 @@ import Kintone from "@/components/Kintone.astro";
 
 では、早速「営業部スペース」を作ってみましょう。
 
-1. <Kintone />のポータルで、［スペース］エリアにある+の形をした［スペースを作成する］アイコンをクリックし、［スペースを作成］をクリックします。
+1. <Kintone />のポータルで、<Wovn>［スペース］</Wovn>エリアにある+の形をした<Wovn>［スペースを作成する］</Wovn>アイコンをクリックし、<Wovn>［スペースを作成］</Wovn>をクリックします。
    <Img src="/k/kintone/img-ja/add_space_img01.png" alt="スクリーンショット：［スペースを作成する］アイコンと［スペースを作成］のリンクが枠線で強調された［ポータル］画面" />
 
-1. ［はじめから作る］をクリックします。
+1. <Wovn>［はじめから作る］</Wovn>をクリックします。
    <Img src="/k/kintone/img-ja/add_team_space_img02.png" alt="スクリーンショット：［はじめから作る］のリンクが枠線で強調された［スペースの作成］画面" />
 
-1. ［基本設定］タブで、スペース名に「営業部スペース」と入力します。
+1. <Wovn>［基本設定］</Wovn>タブで、スペース名に「営業部スペース」と入力します。
    <Img src="/k/kintone/img-ja/add_team_space_img03.png" alt="スクリーンショット：［基本設定］タブでスペース名の入力欄が枠線で強調されている" />
 
-1. ［スペースのポータルと複数のスレッドを使用する］にチェックを入れます。  
+1. <Wovn>［スペースのポータルと複数のスレッドを使用する］</Wovn>にチェックを入れます。  
    チェックを入れると、スペース内に複数のスレッドを作成できるようになります。たとえば、スペース内に「商談対応スレッド」や「提案書共有スレッド」を作成すると、それぞれのスレッドタイトルに合わせたやりとりの場ができます。
    <Img src="/k/kintone/img-ja/add_team_space_img05.png" alt="スクリーンショット：［基本設定］タブで［スペースのポータルと複数のスレッドを使用する］にチェックが入っている" />
-   <Hint>
-   スレッドの作成手順については、次のページを参照してください。  
-     [スレッドでチームメンバーとやり取りしてみよう](/k/ja/id/040144.html)
-   </Hint>
+     <Hint>
+  スレッドの作成手順については、次のページを参照してください。  
+  [スレッドでチームメンバーとやり取りしてみよう](/k/ja/id/040144.html)
+     </Hint>
 
-1. ［参加メンバー］タブをクリックします。
+1. <Wovn>［参加メンバー］</Wovn>タブをクリックします。
 
-1. スペースの参加メンバーにしたいユーザーを検索するか、ユーザー検索の右側にある［組織やグループから選択］アイコンから選択して［追加］をクリックします。  
-  ここでは、営業部メンバー全員を設定したいので、［組織やグループから選択］アイコンから「営業部」を選択し、右上に表示される［すべて選択］にチェックを付けて追加します。
+1. スペースの参加メンバーにしたいユーザーを検索するか、ユーザー検索の右側にある<Wovn>［組織やグループから選択］</Wovn>アイコンから選択して<Wovn>［追加］</Wovn>をクリックします。  
+  ここでは、営業部メンバー全員を設定したいので、<Wovn>［組織やグループから選択］</Wovn>アイコンから「営業部」を選択し、右上に表示される<Wovn>［すべて選択］</Wovn>にチェックを付けて追加します。<Wovn></Wovn>
    <Img src="/k/kintone/img-ja/add_team_space_img07.png" alt="スクリーンショット：［参加メンバー］タブで［組織やグループから選択］アイコンが枠線で強調されている" />
    <Img src="/k/kintone/img-ja/add_team_space_img08.png" alt="スクリーンショット：［組織］タブで営業部のメンバーをすべて選択している" />
 
-1. ［保存］をクリックします。
+1. <Wovn>［保存］</Wovn>をクリックします。
 
 これで、次のような「営業部スペース」が完成しました。
 <Img src="/k/kintone/img-ja/add_team_space_img09.png" alt="スクリーンショット：完成した「営業部スペース」" />
 
-<Kintone />のトップページに戻ると、［スペース］欄に「営業部スペース」が表示され、クリックすると「営業部スペース」を開くことができます。また、参加メンバーとして設定されたユーザーの<Kintone />でも同じように表示されます。
+<Kintone />のトップページに戻ると、<Wovn>［スペース］</Wovn>欄に「営業部スペース」が表示され、クリックすると「営業部スペース」を開くことができます。また、参加メンバーとして設定されたユーザーの<Kintone />でも同じように表示されます。
 <Img src="/k/kintone/img-ja/add_team_space_img10.png" alt="スクリーンショット：［スペース］欄の「営業部スペース」を枠線で強調" />
 
 次は、「営業部スペース」にスレッドを作成して、スレッド上でメンバーとやり取りしてみましょう。次のページを参照してください。  
 [スレッドでチームメンバーとやり取りしてみよう](/k/ja/id/040144.html)
 
 <Hint>
-  スペースでは、ここで紹介した機能以外にも、チームのやり取りに必要なさまざまな設定が可能です。たとえば、チームメンバー限定のスペースを作成したり、スペースに紐づけたアプリを作成して必要な情報を集約したりできます。詳細は、次のページを参照してください。  
-  [スペース](/k/ja/id/040691.html)  
-  [スペースの管理](/k/ja/id/04071.html)
+
+スペースでは、ここで紹介した機能以外にも、チームのやり取りに必要なさまざまな設定が可能です。たとえば、チームメンバー限定のスペースを作成したり、スペースに紐づけたアプリを作成して必要な情報を集約したりできます。詳細は、次のページを参照してください。  
+[スペース](/k/ja/id/040691.html)  
+[スペースの管理](/k/ja/id/04071.html)
+
 </Hint>
